# hlib

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  meson.build  meson_options.txt
cmake/: codegen.cmake
include/: fmt
include/hlib/: base.hpp  buffer.hpp  circular_buffer.hpp  codec.hpp  config.hpp  container.hpp  cpu.hpp  debug.hpp  emitter.hpp  endian.hpp  enum.hpp  error.hpp  event_bus.hpp  event_loop.hpp  event_queue.hpp  fdio.hpp  file.hpp  file_server.hpp  format.hpp  format_extra.hpp  fsm.hpp  http_server.hpp  ipc.hpp  json.hpp  latch.hpp  lock.hpp  log.hpp  macro.hpp  math.hpp  memory.hpp  pegtl.hpp  pool.hpp  receiver.hpp  result.hpp  scope_guard.hpp  serial.hpp  signal.hpp  sink.hpp  sock_addr.hpp  socket.hpp  (+14 more)
include/hlib/c/: base.h  buffer.h  circular_buffer.h  codec.h  codec_binary.h  endian.h  error.h  hash_map.h  impl.h  ipc.h  vector.h
include/hlib/typescript/: codec.ts
src/: hlib_base.cpp  hlib_buffer.cpp  hlib_c_impl.cpp  hlib_circular_buffer.cpp  hlib_codec.cpp  hlib_codec_binary.cpp  hlib_codec_binary.hpp  hlib_codec_json.cpp  hlib_codec_json.hpp  hlib_cpu.cpp  hlib_debug.cpp  hlib_emitter.cpp  hlib_endian.cpp  hlib_error.cpp  hlib_event_bus.cpp  hlib_event_loop.cpp  hlib_event_queue.cpp  hlib_fdio.cpp  hlib_file.cpp  hlib_file_server.cpp  hlib_format.cpp  hlib_format.hpp  hlib_http_server.cpp  hlib_ipc.cpp  hlib_json.cpp  hlib_latch.cpp  hlib_log.cpp  hlib_math.cpp  hlib_receiver.cpp  hlib_scope_guard.cpp  hlib_signal.cpp  hlib_sink.cpp  hlib_sock_addr.cpp  hlib_socket.cpp  hlib_source.cpp  hlib_string.cpp  hlib_subprocess.cpp  hlib_test.cpp  hlib_time.cpp  hlib_timer.cpp  (+7 more)
test/: CMakeLists.txt  meson.build
test/src/: buffer.cpp  circular_buffer.cpp  codec.cpp  codegen.cpp  codegen.json  container.cpp  cpu.cpp  endian.cpp  error.cpp  event_bus.cpp  event_loop.cpp  event_queue.cpp  file_server.cpp  fsm.cpp  hash_map.cpp  http_server.cpp  ipc.cpp  json.cpp  math.cpp  memory.cpp  result.cpp  serial.cpp  sock_addr.cpp  sockaddr.cpp  socket.cpp  string.cpp  subprocess.cpp  test.cpp  test.hpp  time.cpp  type_traits.cpp  uri.cpp  usage.cpp  web_socket.cpp
tools/codegen/: CMakeLists.txt
tools/codegen/src/: config.hpp  generator.cpp  generator.hpp  generator_c99.cpp  generator_c99.hpp  generator_cpp11.cpp  generator_cpp11.hpp  generator_cpp17.cpp  generator_cpp17.hpp  generator_typescript.cpp  generator_typescript.hpp  main.cpp  types.cpp  types.hpp  utility.cpp  utility.hpp
